# Best-Hack-FNews

./: .env.dev  .gitignore  README.md  docker-compose.yml
Backend/personal-account/: Dockerfile  README.md  alembic.ini  pyproject.toml
Backend/personal-account/src/: __main__.py
Backend/personal-account/src/personal_account/: create_app.py  settings.py
Backend/personal-account/src/personal_account/api/: app_status.py
Backend/personal-account/src/personal_account/api/v1/base/: utils.py
Backend/personal-account/src/personal_account/api/v1/base/models/: core.py
Backend/personal-account/src/personal_account/api/v1/news/: core.py  models.py  views.py
Backend/personal-account/src/personal_account/api/v1/news_books/: core.py  models.py  views.py
Backend/personal-account/src/personal_account/api/v1/users/: authentication.py  core.py  models.py  token.py  views.py
Backend/personal-account/src/personal_account/api/v1/wallet/: core.py  models.py  views.py
Backend/personal-account/src/personal_account/migrations/: env.py
Backend/personal-account/src/personal_account/migrations/versions/: 28ebe6bb6ec0_initial_commit.py  3a4df88442b5_fix_relationships.py  44d2f5501815_fix_currencies.py  c0f431ac6f50_add_newsbooks_table.py
Backend/vk-crawler/: pyproject.toml
Backend/vk-crawler/scripts/: mock_consume.py  mock_produce.py
Backend/vk-crawler/src/: __main__.py
Backend/vk-crawler/src/vk_crawler/: crawler.py  create_app.py  settings.py
Frontend/: .gitignore  README.md  docker-dev.sh  docker-dist.sh  package.json  webpack.config.js
Frontend/src/: index.html  (+1 more)
(+37 files in other folders)
