[tool.poetry]
name = "vk-crawler"
version = "0.1.0"
description = ""
authors = ["Nikita Lupenko <nicklupman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
httpx = "^0.22.0"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
rope = "^1.0.0"
bandit = "^1.7.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
